# llm-rts

./: .gitignore  README.md  package-lock.json  repomix-output.xml
backend/: .env.example  config.py  main.py  pyproject.toml
backend/ai/: __init__.py  commander.py  commentator.py  prompts.py
backend/engine/: __init__.py  abilities.py  buildings.py  capture.py  combat.py  fog_of_war.py  game_loop.py  map_events.py  map_generator.py  movement.py  pathfinding.py  research.py  resources.py
backend/models/: __init__.py  actions.py  game_state.py  messages.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  types.ts
frontend/src/audio/: SoundManager.ts  useSoundEffects.ts
frontend/src/network/: useWebSocket.ts
frontend/src/scene/: AbilityEffects.tsx  AttackLines.tsx  Buildings.tsx  CapturePoints.tsx  Effects.tsx  GameScene.tsx  MapEvents.tsx  Particles.tsx  Projectiles.tsx  ResourceNodes.tsx  Terrain.tsx  Units.tsx
frontend/src/store/: gameStore.ts
frontend/src/ui/: CommanderPanel.tsx  Commentary.tsx  EconomyGraph.tsx  EventLog.tsx  HUD.tsx  Minimap.tsx  StatsPanel.tsx  StrengthBar.tsx  UnitInspector.tsx
