[project]
name = "llm-battle-arena-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-ai>=0.0.14",
    "pydantic-ai[anthropic]>=0.0.14",
    "pydantic-ai[google]>=0.0.14",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.40.0",
    "google-generativeai>=0.8.0",
]
